unpackaged/main/default/objects/Escalation_Admin_Table__c/Escalation_Admin_Table__c.object-meta.xml
<CustomObject>
    <label>Escalation Admin Table</label>
    <nameField>
        <displayFormat>ESC-{00000}</displayFormat>
        <label>Escalation Admin Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Admin Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>