unpackaged/main/default/objects/Escalation_Admin_Table__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>Please Use the Record type developer name here.</description>
    <label>Case Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E_Commerce</fullName>
                <label>E-Commerce</label>
            </value>
            <value>
                <fullName>GX360_Survey</fullName>
                <label>GX360 Survey</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>