unpackaged/main/default/objects/Escalation_Admin_Table__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Guest</fullName>
            </value>
            <value>
                <fullName>Pending Internal</fullName>
            </value>
            <value>
                <fullName>Pending Warehouse</fullName>
            </value>
            <value>
                <fullName>Pending Shipper</fullName>
            </value>
            <value>
                <fullName>Pending Shipper Secondary</fullName>
            </value>
            <value>
                <fullName>Pending Warehouse Secondary</fullName>
            </value>
            <value>
                <fullName>Pending Internal Secondary</fullName>
            </value>
            <value>
                <fullName>Pending Guest Secondary</fullName>
            </value>
            <value>
                <fullName>Pending Onsite Property Team Member</fullName>
            </value>
            <value>
                <fullName>Paused Crisis</fullName>
            </value>
            <value>
                <fullName>Paused Other</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>