unpackaged/main/default/objects/Escalation_Admin_Table__c/fields/System_Priority__c.field-meta.xml
<CustomField>
    <fullName>System_Priority__c</fullName>
    <formula>IF( Text(Escalation_Level__c)==&#39;Lead Team Member&#39;, &#39;1&#39; ,
IF( Text(Escalation_Level__c)==&#39;Supervisor&#39;, &#39;2&#39; ,
IF( Text(Escalation_Level__c)==&#39;Manager&#39;, &#39;3&#39; ,
IF( Text(Escalation_Level__c)==&#39;Director&#39;, &#39;4&#39; ,
IF( Text(Escalation_Level__c)==&#39;VP&#39;, &#39;5&#39; ,			
		&#39;0&#39;
		
		)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Priority</label>
    <type>Text</type>
</CustomField>