unpackaged/main/default/objects/Escalation_Admin_Table__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Card_Rock Royalty</fullName>
                <label>X-Card / Rock Royalty</label>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>XCARD</fullName>
            </value>
            <value>
                <fullName>Free (HRI)</fullName>
                <isActive>false</isActive>
                <label>Free (HRI)</label>
            </value>
            <value>
                <fullName>HRI VIP</fullName>
                <isActive>false</isActive>
                <label>HRI VIP</label>
            </value>
            <value>
                <fullName>Paid (HRI)</fullName>
                <isActive>false</isActive>
                <label>Paid (HRI)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>