unpackaged/main/default/objects/Escalation_Admin_Table__c/fields/Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Minutes__c</fullName>
    <description>Please Enter the time in Minutes.</description>
    <label>Time (Minutes)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>