unpackaged/main/default/objects/Escalation_Admin_Table__c/listViews/All_GX360_Survey.listView-meta.xml
<ListView>
    <fullName>All_GX360_Survey</fullName>
    <columns>NAME</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Escalation_Level__c</columns>
    <columns>Tier__c</columns>
    <columns>Time_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Record_Type__c</field>
        <operation>equals</operation>
        <value>GX360_Survey</value>
    </filters>
    <label>GX360 Survey</label>
</ListView>