unpackaged/main/default/objects/Escalation_Admin_Table__c/listViews/All_Loyalty.listView-meta.xml
<ListView>
    <fullName>All_Loyalty</fullName>
    <columns>NAME</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Escalation_Level__c</columns>
    <columns>System_Priority__c</columns>
    <columns>Tier__c</columns>
    <columns>Time_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Record_Type__c</field>
        <operation>equals</operation>
        <value>Loyalty</value>
    </filters>
    <filters>
        <field>Case_Status__c</field>
        <operation>equals</operation>
        <value>Pending Internal Secondary</value>
    </filters>
    <label>Loyalty + Platinum</label>
</ListView>